Update download link for BakiKhata APK

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                     </div>
 
                     <div class="download-buttons">
-                        <a href="./downloads/BakiKhata-v2.0.0.apk" class="btn btn-download btn-lg" download>
+                        <a href="https://gqmfdoapiuecboeyajih.supabase.co/storage/v1/object/public/App/BakiKhata-v2.0.0.apk" class="btn btn-download btn-lg" download>
                             <div class="btn-icon-wrap">
                                 <svg viewBox="0 0 24 24" fill="currentColor" width="28" height="28">
                                     <path d="M17.523 15.3414c-.5511 0-.9993-.4486-.9993-.9998s.4482-.9999.9993-.9999c.5511 0 .9993.4487.9993.9999s-.4482.9998-.9993.9998m-11.046 0c-.5511 0-.9993-.4486-.9993-.9998s.4482-.9999.9993-.9999c.5511 0 .9993.4487.9993.9999s-.4482.9998-.9993.9998m11.4043-6.5616l1.5677-2.6632c.0861-.1463.0372-.3339-.1091-.4199-.1463-.0861-.3339-.0372-.42.1091L17.3239 9.0558c-1.0498-.4814-2.2278-.7549-3.4859-.7549-1.2581 0-2.436.2735-3.4858.7549L8.7565 6.2258c-.0861-.1463-.2737-.1952-.4199-.1091-.1463.086-.1952.2736-.1091.4199l1.5677 2.6632C7.2091 10.3761 5.3813 12.7821 5.25 15.6h13.5c-.1313-2.8179-1.9591-5.2239-4.5447-6.2202"/>
